--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     >
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      rel="stylesheet"
+    >
   </head>
   <body>
     <nav class="navbar sticky-top bg-dark-subtle">
@@ -23,7 +27,7 @@
         <div>
           <span class="navbar-text me-2"><span class="num-filtered">37</span>/37 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <div id="funnel-icon" class="bi-funnel" width="1em" height="1em"></div>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -576,6 +580,9 @@
               );
             }
           });
+        document.getElementById("funnel-icon").setAttribute(
+          "class", combinations.length === 0 ? "bi-funnel" : "bi-funnel-fill"
+        );
         isotope.arrange({filter: combinations.join()});
       };
 
