Make subtitle take less vertical space on smaller viewports

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
     </nav>
-    <nav class="navbar d-lg-none bg-dark-subtle">
+    <nav class="navbar d-lg-none bg-dark-subtle py-0">
       <div class="container">
         <span class="navbar-text">
           Cartes Disney Lorcana avec des textes incorrects en français
