--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           name: "Dingo",
           version: "Mousquetaire",
           image: "images/001_004.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "4/204 · FR · 1",
         },
@@ -123,8 +123,8 @@
           name: "Maximus",
           version: "Cheval du palais",
           image: "images/001_010.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "10/204 · FR · 1",
         },
@@ -143,8 +143,8 @@
           name: "Simba",
           version: "Lionceau protecteur",
           image: "images/001_020.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "20/204 · FR · 1",
         },
@@ -193,8 +193,8 @@
           name: "Génie",
           version: "Fait le show",
           image: "images/001_075.jpg",
-          incorrectText: "Lorsque vous jouez ce personnage, choisissez un personnage et renvoyez-le dans la main de son propriétaire.",
-          correctedText: "Lorsque vous jouez ce personnage, vous pouvez choisir un personnage et le renvoyer dans la main de son propriétaire.",
+          incorrectText: "[...], choisissez un personnage et renvoyez-le dans la main de son propriétaire.",
+          correctedText: "[...], vous pouvez choisir un personnage et le renvoyer dans la main de son propriétaire.",
           officialCorrection: "Aucune",
           number: "75/204 · FR · 1",
         },
@@ -243,8 +243,8 @@
           name: "Donald",
           version: "Mousquetaire",
           image: "images/001_177.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "177/204 · FR · 1",
         },
@@ -253,8 +253,8 @@
           name: "Hercule",
           version: "Vrai héros",
           image: "images/001_181.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "181/204 · FR · 1",
         },
@@ -333,8 +333,8 @@
           name: "Namaari",
           version: "Brume matinale",
           image: "images/002_189.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "189/204 · FR · 2",
         },
@@ -353,8 +353,8 @@
           name: "Le Prince",
           version: "N’abandonne jamais",
           image: "images/002_195.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Aucune",
           number: "195/204 · FR · 2",
         },
@@ -363,8 +363,8 @@
           name: "Baloo",
           version: "von Bruinwald XIII",
           image: "images/003_001.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Corrigé sur l’application",
           number: "1/204 · FR · 3",
         },
@@ -373,8 +373,8 @@
           name: "Amadou Gentil",
           version: "Le docteur",
           image: "images/003_005.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Corrigé sur l’application",
           number: "5/204 · FR · 3",
         },
@@ -383,8 +383,8 @@
           name: "Nani",
           version: "Sœur protectrice",
           image: "images/003_012.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Corrigé sur l’application",
           number: "12/204 · FR · 3",
         },
@@ -393,8 +393,8 @@
           name: "Pluto",
           version: "Protecteur déterminé",
           image: "images/003_017.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Corrigé sur l’application",
           number: "17/204 · FR · 3",
         },
@@ -443,8 +443,8 @@
           name: "Kida",
           version: "Guerrière royale",
           image: "images/003_177.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Corrigé sur l’application",
           number: "177/204 · FR · 3",
         },
@@ -453,8 +453,8 @@
           name: "Petit Jean",
           version: "Compagnon de Robin",
           image: "images/003_179.jpg",
-          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, si possible, choisir l’un de vos personnages avec Rempart.",
-          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, si possible, choisir l’un de vos personnages avec Rempart.",
+          incorrectText: "Lorsqu’il vous défie, un personnage adverse doit, [...]",
+          correctedText: "Lorsqu’un adversaire défie l’un de vos personnages, il doit, [...]",
           officialCorrection: "Corrigé sur l’application",
           number: "179/204 · FR · 3",
         },
