--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           version: "",
           image: "images/002_097.jpg",
           incorrectText: "<i>(Première impression)</i> Choisissez l’un de vos personnages pour renvoyer un personnage adverse dans la main de son propriétaire.<br /><i>(Deuxième impression)</i> Choisissez un de vos personnages et un autres personnage. Renvoyez ces deux personnages dans la main de leur propriétaire.",
-          correctedText: "Choisissez un de vos personnages pour renvoyer un autre personnage dans la main de son propriétaire.",
+          correctedText: "Choisissez l’un de vos personnages pour renvoyer un autre personnage dans la main de son propriétaire.",
           officialCorrection: "Aucune",
           number: "97/204 · FR · 2",
         },
