--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set4" data-filter=".set4">
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set4">Le retour d’Ursula</label>
             </div>
-            <h6>Couleur d’Encre</h6>
+            <h6>Couleur d’encre</h6>
             <div class="d-flex flex-wrap gap-2 mb-4 button-group">
               <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-ambre" data-filter=".ambre">
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-ambre">Ambre</label>
