Add and use SVGs for card symbols

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
           name: "Stitch",
           version: "Surfeur insouciant",
           image: "images/001_021.jpg",
-          incorrectText: "1 {L}",
-          correctedText: "2 {L}",
+          incorrectText: "<img style=\"width: 1em;\" src=\"images/L.svg\" />",
+          correctedText: "<img style=\"width: 1em;\" src=\"images/L.svg\" /> <img style=\"width: 1em;\" src=\"images/L.svg\" />",
           officialCorrection: "Corrigé sur l’application et lors de la réimpression",
           number: "21/204 · FR · 1",
         },
@@ -282,8 +282,8 @@
           name: "De zéro en héros",
           version: "",
           image: "images/002_032.jpg",
-          incorrectText: "Le prochain personnage que vous jouez durant ce tour vous coûte -X , X étant le nombre de personnages que vous avez en jeu à ce moment-là.",
-          correctedText: "Le prochain personnage que vous jouez durant ce tour coûte X {I} de moins, X étant le nombre de personnages que vous avez en jeu.",
+          incorrectText: "Le prochain personnage que vous jouez durant ce tour vous coûte -X <img style=\"width: 1em;\" src=\"images/I.svg\" />, X étant le nombre de personnages que vous avez en jeu à ce moment-là.",
+          correctedText: "Le prochain personnage que vous jouez durant ce tour coûte X <img style=\"width: 1em;\" src=\"images/I.svg\" /> de moins, X étant le nombre de personnages que vous avez en jeu.",
           officialCorrection: "Aucune",
           number: "32/204 · FR · 2",
         },
@@ -472,8 +472,8 @@
           name: "Tuk Tuk",
           version: "Partenaire percutant",
           image: "images/004_127.jpg",
-          incorrectText: "[...], vous pouvez choisir un autre personnage et les déplacer tous les deux gratuitement sur un même lieu. Le personnage choisi gagne +2 {S} pour le reste de ce tour.",
-          correctedText: "[...], vous pouvez le déplacer et un autre de vos personnages sur le même lieu gratuitement. L’autre personnage gagne +2 {S} pour le reste de ce tour.",
+          incorrectText: "[...], vous pouvez choisir un autre personnage et les déplacer tous les deux gratuitement sur un même lieu. Le personnage choisi gagne +2 <img style=\"width: 1em;\" src=\"images/S.svg\" /> pour le reste de ce tour.",
+          correctedText: "[...], vous pouvez le déplacer et un autre de vos personnages sur le même lieu gratuitement. L’autre personnage gagne +2 <img style=\"width: 1em;\" src=\"images/S.svg\" /> pour le reste de ce tour.",
           officialCorrection: "Aucune",
           number: "127/204 · FR · 4",
         },
