Simplify HTML code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div>
           <span class="navbar-text me-2"><span class="num-filtered">37</span>/37 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <div id="funnel-icon" class="bi-funnel" width="1em" height="1em"></div>
+            <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
