Improve corrected text for The Hunter

--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
           name: "Le chasseur",
           version: "Homme de main réticent",
           image: "images/002_194.jpg",
-          incorrectText: "[...], vous pouvez piochez une carte [...]",
-          correctedText: "[...], vous pouvez piocher une carte [...]",
-          officialCorrection: "Corrigé sur l’application et lors de la réimpression",
+          incorrectText: "[...], vous pouvez piochez une carte puis en défaussez une.",
+          correctedText: "[...], vous pouvez piocher une carte puis en défausser une.",
+          officialCorrection: "Corrigé partiellement (uniquement \"piocher\") sur l’application et lors de la réimpression",
           number: "194/204 · FR · 2",
         },
         {
