Fix text for Bounce

--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
           name: "Rebondir",
           version: "",
           image: "images/002_097.jpg",
-          incorrectText: "<i>(Première impression)</i> Choisissez l’un de vos personnages pour renvoyer un <mark>personnage adverse</mark> dans la main de son propriétaire.<br /><i>(Deuxième impression)</i> Choisissez un de vos personnages et un autres personnage. Renvoyez ces deux personnages dans la main de leur propriétaire.",
-          correctedText: "Choisissez l’un de vos personnages pour renvoyer un <mark>autre personnage</mark> dans la main de son propriétaire.",
+          incorrectText: "<i>(Première impression)</i> Choisissez l’un de vos personnages et renvoyez-le dans votre main pour renvoyer un <mark>personnage adverse</mark> dans la main de son propriétaire.<br /><i>(Deuxième impression)</i> Choisissez un de vos personnages et un autres personnage. Renvoyez ces deux personnages dans la main de leur propriétaire.",
+          correctedText: "Choisissez l’un de vos personnages et renvoyez-le dans votre main pour renvoyer un <mark>autre personnage</mark> dans la main de son propriétaire.",
           officialCorrection: "Aucune",
           number: "97/204 · FR · 2",
         },
